deploy/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: czarek7777/frontend:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: frontend
