deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'false'
    nginx.ingress.kubernetes.io/enable-cors: 'false'
spec:
  rules:
    - host: k8s.training.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
